--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "foundation-sites": "^6.2.1",
+    "jquery": "^2.2.3",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   }
 }
